Fix overflow and breadcrumb

--- a/src/styles/partials/global/base.pcss
+++ b/src/styles/partials/global/base.pcss
@@ -12,6 +12,7 @@
   box-sizing: border-box;
 }
 html {
+  overflow-x: hidden;
   position: relative;
   height: 100%;
   width: 100%;
@@ -21,7 +22,8 @@ html {
   line-height: 1.8em;
 }
 body {
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   font-size: inherit;
   font-family: inherit;
   font-weight: inherit;
