--- a/src/styles/partials/modules/header.pcss
+++ b/src/styles/partials/modules/header.pcss
@@ -62,8 +62,8 @@ header.header {
       span {
         position: absolute;
         background-color: color(grey-light);
-        border-radius: 2px;
-        height: 2px;
+        border-radius: 1px;
+        height: 1px;
         left: 0;
         right: 0;
       }
